fix: update deprecated meta tag
Replaces the deprecated <meta name="apple-mobile-web-app-capable" content="yes"> with <meta name="mobile-web-app-capable" content="yes"> in index.html.

This change addresses a warning about using a deprecated meta tag for Apple mobile web apps.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#76b900">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="GFN Tracker">
     <link rel="icon" href="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDAgMTAwIj48Y2lyY2xlIGN4PSI1MCIgY3k9IjUwIiByPSI0NSIgZmlsbD0iIzc2YjkwMCIgLz48L3N2Zz4=">
     
