--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>GFN Tracker</title>
+    <base href="/">
     
     <!-- PWA Manifest & Meta -->
     <meta name="theme-color" content="#76b900">
