--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div id="root"></div>
-    <script type="module" src="/src/App.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
